Do not use Z3's simplification

--- a/tools/xref/www/index.html
+++ b/tools/xref/www/index.html
@@ -76,7 +76,7 @@
                     <select name="cbr_tactics" multiple>
                         <option>ackermannize_bv</option>
                         <option>add-bounds</option>
-                        <option selected>aig</option>
+                        <option>aig</option>
                         <option>auflia</option>
                         <option>auflira</option>
                         <option>aufnira</option>
@@ -163,9 +163,9 @@
                         <option>reduce-args</option>
                         <option>reduce-bv-size</option>
                         <option>reduce-invertible</option>
-                        <option>sat</option>
+                        <option selected>sat</option>
                         <option>sat-preprocess</option>
-                        <option selected>simplify</option>
+                        <option>simplify</option>
                         <option>skip</option>
                         <option>smt</option>
                         <option>smtfd</option>
@@ -190,7 +190,7 @@
                     <select name="sr_tactics" multiple>
                         <option>ackermannize_bv</option>
                         <option>add-bounds</option>
-                        <option selected>aig</option>
+                        <option>aig</option>
                         <option>auflia</option>
                         <option>auflira</option>
                         <option>aufnira</option>
@@ -203,7 +203,7 @@
                         <option>card2bv</option>
                         <option>cofactor-term-ite</option>
                         <option>collect-statistics</option>
-                        <option selected>ctx-simplify</option>
+                        <option>ctx-simplify</option>
                         <option>ctx-solver-simplify</option>
                         <option>default</option>
                         <option>degree-shift</option>
@@ -243,7 +243,7 @@
                         <option>pb2bv</option>
                         <option>pb-preprocess</option>
                         <option>pqffd</option>
-                        <option selected>propagate-bv-bounds</option>
+                        <option>propagate-bv-bounds</option>
                         <option>propagate-bv-bounds-new</option>
                         <option>propagate-ineqs</option>
                         <option>propagate-values</option>
@@ -277,9 +277,9 @@
                         <option>reduce-args</option>
                         <option>reduce-bv-size</option>
                         <option>reduce-invertible</option>
-                        <option>sat</option>
+                        <option selected>sat</option>
                         <option>sat-preprocess</option>
-                        <option selected>simplify</option>
+                        <option>simplify</option>
                         <option>skip</option>
                         <option>smt</option>
                         <option>smtfd</option>
