Add timeout control to CGI

--- a/tools/xref/www/index.html
+++ b/tools/xref/www/index.html
@@ -299,6 +299,11 @@
                         <option>unit-subsume-simplify</option>
                     </select>
                 </fieldset>
+                <fieldset>
+                    <legend>Miscellaneous</legend>
+                    <label for="timeout">Timeout in seconds</label>
+                    <input type="number" name="timeout" value="10">
+                </fieldset>
             </div>
         </details>
     </form>
